--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,10 @@
     "target": "es2016",
     "module": "commonjs",
     "outDir": "./dist",
+    "baseUrl": "./src/",
+    "paths": {
+      "@common/*": ["../../javascriptOS-common/types/*"]
+    },
     "strict": true,
     "esModuleInterop": true,
     "inlineSourceMap": true,
