--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "inversify": "^6.0.1",
+    "javascriptos-common": "^1.0.5",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.4",
+    "eslint": "^8.27.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
