--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "author": "Thijmen Brand",
   "license": "ISC",
   "dependencies": {
+    "@thijmenos/common": "^1.0.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "inversify": "^6.0.1",
-    "javascriptos-common": "^1.0.5",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
