--- a/package.json
+++ b/package.json
@@ -5,19 +5,25 @@
   "main": "dist/app.js",
   "scripts": {
     "dev": "npx nodemon ./src/app.ts",
-    "start": "tsc && node --unhandled-rejections=strict ./dist/app.js"
+    "start": "tsc && node --unhandled-rejections=strict ./dist/app.js",
+    "lint": "npx eslint src",
+    "test": "jest --passWithNoTests"
   },
   "keywords": [],
   "author": "Thijmen Brand",
   "license": "ISC",
   "dependencies": {
-    "@thijmenos/common": "^2.0.1",
-    "@thijmenos/eslint-config": "^1.0.0",
+    "@thijmen-os/common": "^1.0.0",
+    "@thijmen-os/eslint-config": "^1.0.0",
+    "@types/jest": "^29.2.3",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "inversify": "^6.0.1",
-    "reflect-metadata": "^0.1.13"
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "reflect-metadata": "^0.1.13",
+    "ts-jest": "^29.0.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
