--- a/.gitignore
+++ b/.gitignore
@@ -44,7 +44,7 @@ build/Release
 
 # Dependency directories
 node_modules/
-userfiles/
+userfiles/**/
 jspm_packages/
 
 # Snowpack dependency directory (https://snowpack.dev/)
