--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint": "^8.27.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
+    "ts-reset": "^0.0.1",
     "typescript": "^4.8.4"
   }
 }
