--- a/userfiles/C/OperatingSystem/ThijmenOSdata/settings.json
+++ b/userfiles/C/OperatingSystem/ThijmenOSdata/settings.json
@@ -22,7 +22,7 @@
         "applicationIdentifier": "2",
         "name": "NoteBlock",
         "iconLocation": "C/ProgramFiles/noteblock/noteblock-icon.svg",
-        "exeLocation": "C/ProgramFiles/noteblock/",
+        "exeLocation": "C/ProgramFiles/noteblock/index.js",
         "mimeTypes": ["txt", "json", "html"],
         "permissions": [0]
       },
@@ -52,6 +52,11 @@
   "accounts": [
     {
       "userId": "1",
+      "username": "Root",
+      "password": "Root"
+    },
+    {
+      "userId": "2",
       "username": "Thijmen",
       "email": "Thijmen@ik.nu",
       "password": "Welkom01",
@@ -66,7 +71,7 @@
       }
     },
     {
-      "userId": "2",
+      "userId": "3",
       "username": "Aukje",
       "email": "Aukje@ik.nu",
       "password": "Welkom01",
