shared mem alloc

--- a/userfiles/C/OperatingSystem/ThijmenOSdata/settings.json
+++ b/userfiles/C/OperatingSystem/ThijmenOSdata/settings.json
@@ -38,7 +38,7 @@
         "applicationIdentifier": "4",
         "name": "debug",
         "iconLocation": "C/ProgramFiles/debug/-icon.svg",
-        "exeLocation": "C/ProgramFiles/debug/dist",
+        "exeLocation": "C/ProgramFiles/debug/",
         "mimeTypes": [],
         "permissions": [0]
       }
