--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Thijmen Brand",
   "license": "ISC",
   "dependencies": {
+    "@thijmen-os/common": "^2.0.12",
     "@thijmen-os/eslint-config": "^1.0.0",
     "@types/jest": "^29.2.3",
     "body-parser": "^1.20.1",
